# docling-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  main.py  pyproject.toml  requirements.txt
document_converter/: rag_processor.py  route.py  schema.py  service.py  utils.py
factsheet/: route.py  schema.py  service.py  websocket.py
shared/: dependencies.py
worker/: celery_app.py  celery_config.py  tasks.py
